--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+/*COPYRIGHT of 2025, made by MoonClient. 
+Do not use this repository to create you're own website. 
+This is only public for github pages*/
+
 HTML, body {
     height: 100%;
     margin: 0;
@@ -66,6 +70,14 @@ HTML, body {
 
 .mods2 p{
     margin-left: 10px;
+}
+
+.mods3 {
+    display: flex;
+}
+
+.mods3 p{
+    marigin-left: 10px;
 }
 
 a {
