--- a/styles.css
+++ b/styles.css
@@ -122,6 +122,7 @@ a {
     margin-left: auto;
     margin-right: auto;
     height: 220px;
+    border-radius: 10px;
 }
 
 #downloads {
@@ -131,6 +132,7 @@ a {
     margin-left: auto;
     margin-right: auto;
     height: 220px;
+    border-radius: 10px;
 }
 
 #meteorPlus {
@@ -140,4 +142,5 @@ a {
     margin-left: auto;
     margin-right: auto;
     height: 500px;
+    border-radius: 10px;
 }
